Android customReceiver sample update

--- a/Android_mParticle_LP_customReceiver/app/build.gradle
+++ b/Android_mParticle_LP_customReceiver/app/build.gradle
@@ -27,10 +27,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.mparticle:android-core:5+'
+//    implementation 'com.mparticle:android-core:5+'
 
-
-    implementation "com.mparticle:android-leanplum-kit:5.3.2"
+    implementation "com.mparticle:android-leanplum-kit:5.6.0"
 //    implementation 'com.leanplum:leanplum-fcm:4.0.1'
 
 
@@ -38,8 +37,13 @@ dependencies {
 //    compile 'com.leanplum:leanplum-fcm:4.0.1'
 
     implementation 'com.google.android.gms:play-services-ads:11.6.2'
-    compile 'com.google.firebase:firebase-core:11.6.2'
+//    compile 'com.google.firebase:firebase-core:11.6.2'
     compile 'com.google.firebase:firebase-messaging:11.6.2'
+
+//    compile 'com.leanplum:leanplum-fcm:4.0.1'
+//    compile 'com.leanplum:leanplum-location:4.0.1'
+//    compile 'com.leanplum:leanplum:4.0.1'
+//    compile 'com.leanplum:leanplum-uieditor:4.0.1'
 }
 
 // Include for FCM.
