--- a/Android_mParticle_LP_customReceiver/app/build.gradle
+++ b/Android_mParticle_LP_customReceiver/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
 //    compile 'com.google.firebase:firebase-core:11.6.2'
     compile 'com.google.firebase:firebase-messaging:11.6.2'
 
+    // Location services.
+    compile 'com.leanplum:leanplum-location:4.1.1'
+    compile 'com.google.android.gms:play-services-location:11.6.2' // Minimum supported version is 10.0.1.
+
 //    compile 'com.leanplum:leanplum-fcm:4.0.1'
 //    compile 'com.leanplum:leanplum-location:4.0.1'
 //    compile 'com.leanplum:leanplum:4.0.1'
